Get contact/skill by id
