# contacts-api/src/main/java/owt/demo/contacts/api/services/ContactsService.java
@@ -1,6 +1,7 @@
 package owt.demo.contacts.api.services;
 
 import org.springframework.stereotype.Service;
+import owt.demo.contacts.api.exceptions.NotFoundException;
 import owt.demo.contacts.model.Contact;
 
 import java.net.URI;
@@ -10,6 +11,8 @@ import java.util.List;
 public interface ContactsService {
 
     List<Contact> getContacts();
+
+    Contact getContactById(Long id) throws NotFoundException;
 
     URI saveContact(Contact contact);
 }
