# contacts-api/src/main/java/owt/demo/contacts/api/services/ContactsServiceImplementation.java
@@ -1,8 +1,11 @@
 package owt.demo.contacts.api.services;
 
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
+import owt.demo.contacts.api.exceptions.NotFoundException;
 import owt.demo.contacts.api.utils.DTOConverter;
 import owt.demo.contacts.model.Contact;
 import owt.demo.contacts.model.ContactEntity;
@@ -14,6 +17,8 @@ import java.util.List;
 
 @Service
 public class ContactsServiceImplementation implements ContactsService{
+
+    Logger logger = LoggerFactory.getLogger(ContactsServiceImplementation.class);
 
     @Autowired
     ContactRepository contactRepository;
@@ -28,6 +33,16 @@ public class ContactsServiceImplementation implements ContactsService{
         }
 
         return contacts;
+    }
+
+    @Override
+    public Contact getContactById(Long id) throws NotFoundException {
+        ContactEntity contactEntity = contactRepository.findById(id)
+                .orElseThrow(() -> new NotFoundException("No contact found with id "+ id));
+
+        logger.info("Contact found");
+        
+        return DTOConverter.ContactEntityToDTO(contactEntity);
     }
 
     @Override
