# contacts-api/src/main/resources/api-spec.yaml
@@ -62,6 +62,32 @@ paths:
         "400":
           description: Invalid contact
 
+  /contacts/{contactId}:
+    parameters:
+      - name: contactId
+        in: path
+        description: ID of the contact to return
+        required: true
+        type: integer
+        format: int64
+    get:
+      tags:
+        - contact
+      summary: Find contact by id
+      description: Find a contact using its id in the database.
+      operationId: getContactById
+      produces:
+        - applicaton/json
+      responses:
+        200:
+          description: Contact retrieved
+          schema:
+            $ref: "#/definitions/Contact"
+        400:
+          description: Invalid ID
+        404:
+          description: Contact not found
+
   /skills:
     get:
       tags:
@@ -102,6 +128,31 @@ paths:
         400:
           description: Invalid Skill
 
+  /skills/{skillId}:
+    parameters:
+      - name: skillId
+        in: path
+        description: name of the skill to return
+        required: true
+        type: string
+    get:
+      tags:
+        - skill
+      summary: Find skill
+      description: Find skill by its id, which is the name of the skill
+      operationId: findSkillById
+      produces:
+        - application/json
+      responses:
+        200:
+          description: Skill retrieved
+          schema:
+            $ref: "#/definitions/Skill"
+        400:
+          description: Invalid Skill Id
+        404:
+          description: Skill not found
+
 definitions:
   Contact:
     type: "object"
@@ -140,16 +191,6 @@ definitions:
         type: "integer"
         format: "int64"
       username:
-        type: "string"
-  ApiResponse:
-    type: "object"
-    properties:
-      code:
-        type: "integer"
-        format: "int32"
-      type:
-        type: "string"
-      message:
         type: "string"
 externalDocs:
   description: "Find out more about Swagger"
